[gd_scene load_steps=10 format=4 uid="uid://ix3c38h4e6xy"]

[ext_resource type="Texture2D" uid="uid://cyt73ogsfl48p" path="res://sample tileset/spritesheet.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://dpts0i4rf7u6t" path="res://scripts/main.gd" id="1_tefeu"]
[ext_resource type="PackedScene" uid="uid://khfdppv03xhy" path="res://scenes/player.tscn" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://cgmudl7cs1urg" path="res://scripts/ground.gd" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://dejypu24vod1q" path="res://scenes/rock.tscn" id="4_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bv0to3jes171v" path="res://scenes/HUD.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://j5iadgoljdcm" path="res://scenes/enemy.tscn" id="7_o6xl0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0wfyh"]
texture = ExtResource("1_o5qli")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
0:8/0 = 0
0:8/0/texture_origin = Vector2i(0, 4)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, 4)
2:8/0 = 0
2:8/0/texture_origin = Vector2i(0, 4)
3:8/0 = 0
3:8/0/texture_origin = Vector2i(0, 4)
4:8/0 = 0
4:8/0/texture_origin = Vector2i(0, 4)
0:9/0 = 0
0:9/0/texture_origin = Vector2i(0, 8)
1:9/0 = 0
1:9/0/texture_origin = Vector2i(0, 8)
2:9/0 = 0
2:9/0/texture_origin = Vector2i(0, 8)
3:9/0 = 0
3:9/0/texture_origin = Vector2i(0, 8)
4:9/0 = 0
4:9/0/texture_origin = Vector2i(0, 8)
0:10/0 = 0
0:10/0/texture_origin = Vector2i(0, 4)
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0, 0, -8, 16, 0, 0, 8)
1:10/0 = 0
1:10/0/texture_origin = Vector2i(0, 4)
2:10/0 = 0
2:10/0/texture_origin = Vector2i(0, 4)
3:10/0 = 0
3:10/0/texture_origin = Vector2i(0, 4)
4:10/0 = 0
4:10/0/texture_origin = Vector2i(0, 4)
5:0/0 = 0
5:1/0 = 0
6:1/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
8:0/0 = 0
8:1/0 = 0
9:0/0 = 0
9:1/0 = 0
10:0/0 = 0
10:1/0 = 0
5:2/0 = 0
6:2/0 = 0
6:3/0 = 0
7:3/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
10:3/0 = 0
9:3/0 = 0
9:2/0 = 0
8:2/0 = 0
7:2/0 = 0
10:2/0 = 0
8:3/0 = 0
5:3/0 = 0
5:4/0 = 0
6:4/0 = 0
6:5/0 = 0
5:5/0 = 0
5:6/0 = 0
6:6/0 = 0
6:8/0 = 0
6:8/0/texture_origin = Vector2i(0, 4)
5:8/0 = 0
5:8/0/texture_origin = Vector2i(0, 4)
7:8/0 = 0
7:8/0/texture_origin = Vector2i(0, 4)
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
8:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
10:6/0 = 0
5:7/0 = 0
8:8/0 = 0
8:8/0/texture_origin = Vector2i(0, 4)
5:9/0 = 0
5:9/0/texture_origin = Vector2i(0, 8)
6:9/0 = 0
6:9/0/texture_origin = Vector2i(0, 8)
7:9/0 = 0
7:9/0/texture_origin = Vector2i(0, 8)
8:9/0 = 0
8:9/0/texture_origin = Vector2i(0, 8)
5:10/0 = 0
5:10/0/texture_origin = Vector2i(0, 4)
6:10/0 = 0
6:10/0/texture_origin = Vector2i(0, 4)
7:10/0 = 0
7:10/0/texture_origin = Vector2i(0, 4)
8:10/0 = 0
8:10/0/texture_origin = Vector2i(0, 4)
9:10/0 = 0
9:10/0/texture_origin = Vector2i(0, 4)
10:10/0 = 0
10:10/0/texture_origin = Vector2i(0, 4)
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -8, -16, 0, 0, 8, 16, 0)

[sub_resource type="TileSet" id="TileSet_sugp2"]
tile_shape = 1
tile_layout = 5
tile_offset_axis = 1
tile_size = Vector2i(32, 16)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0wfyh")

[node name="Main" type="Node2D"]
scale = Vector2(3, 3)
script = ExtResource("1_tefeu")

[node name="Ground" type="TileMapLayer" parent="." groups=["ground"]]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAFAAIAAAAAAAIAAAAGAAIAAAAAAAIAAAAGAAEAAAAAAAIAAAAFAAAAAAAAAAIAAAAFAAEAAAAAAAIAAAAHAAEAAAAAAAIAAAAGAAAAAAAAAAIAAAAHAAAAAAAAAAIAAAAHAAIAAAAAAAIAAAAHAAMAAAAAAAIAAAAGAAMAAAAAAAIAAAAFAAMAAAAAAAIAAAAEAAMAAAAAAAIAAAAEAAIAAAAAAAIAAAAIAAIAAAAAAAIAAAAIAAMAAAAAAAIAAAAJAAMAAAAAAAIAAAAJAAIAAAAAAAIAAAAIAAEAAAAAAAIAAAAJAAEAAAAAAAIAAAAIAAAAAAAAAAIAAAAJAAAAAAAAAAIAAAAKAAAAAAAAAAIAAAAKAAEAAAAAAAIAAAALAAEAAAAAAAIAAAALAAAAAAAAAAIAAAAMAAAAAAAAAAIAAAAMAAEAAAAAAAIAAAANAAAAAAAAAAIAAAANAAEAAAAAAAIAAAAKAAIAAAAAAAIAAAALAAIAAAAAAAIAAAAMAAIAAAAAAAIAAAAMAP//AAAAAAIAAAAMAAMAAAAAAAIAAAAJAP//AAAAAAIAAAAHAP//AAAAAAIAAAAGAP//AAAAAAIAAAAIAP7/AAAAAAIAAAAHAP7/AAAAAAIAAAAGAP7/AAAAAAIAAAAFAP7/AAAAAAIAAAAFAP//AAAAAAIAAAAEAAAAAAAAAAIAAAADAAAAAAAAAAIAAAADAAEAAAAAAAIAAAADAAIAAAAAAAIAAAADAAMAAAAAAAIAAAAEAAEAAAAAAAIAAAAEAP//AAAAAAIAAAAEAP3/AAAAAAIAAAADAP3/AAAAAAIAAAADAP7/AAAAAAIAAAADAP//AAAAAAIAAAAEAP7/AAAAAAIAAAAFAP3/AAAAAAIAAAAGAP3/AAAAAAIAAAAIAP//AAAAAAIAAAAKAP//AAAAAAIAAAAKAP7/AAAAAAIAAAAKAP3/AAAAAAIAAAAJAP3/AAAAAAIAAAAJAPz/AAAAAAIAAAAIAPz/AAAAAAIAAAAJAP7/AAAAAAIAAAALAP7/AAAAAAIAAAAIAP3/AAAAAAIAAAAHAPz/AAAAAAIAAAAHAPv/AAAAAAIAAAAGAPv/AAAAAAIAAAAGAPr/AAAAAAIAAAAGAPz/AAAAAAIAAAAHAP3/AAAAAAIAAAAFAPz/AAAAAAIAAAAEAPv/AAAAAAIAAAADAPv/AAAAAAIAAAADAPz/AAAAAAIAAAAFAPv/AAAAAAIAAAAEAPr/AAAAAAIAAAAEAPn/AAAAAAIAAAAEAPj/AAAAAAIAAAAFAPj/AAAAAAIAAAAFAPf/AAAAAAIAAAAGAPj/AAAAAAIAAAAFAPn/AAAAAAIAAAAFAPr/AAAAAAIAAAAGAPn/AAAAAAIAAAAHAPj/AAAAAAIAAAAIAPj/AAAAAAIAAAAIAPn/AAAAAAIAAAAIAPr/AAAAAAIAAAAIAPv/AAAAAAIAAAAHAPr/AAAAAAIAAAAHAPn/AAAAAAIAAAAHAPf/AAAAAAIAAAAHAPb/AAAAAAIAAAAGAPX/AAAAAAIAAAAHAPX/AAAAAAIAAAAIAPX/AAAAAAIAAAAIAPb/AAAAAAIAAAAIAPf/AAAAAAIAAAAJAPr/AAAAAAIAAAAJAPv/AAAAAAIAAAAKAPv/AAAAAAIAAAAKAPr/AAAAAAIAAAAKAPn/AAAAAAIAAAAKAPj/AAAAAAIAAAAJAPj/AAAAAAIAAAAJAPf/AAAAAAIAAAAJAPb/AAAAAAIAAAAEAPz/AAAAAAIAAAALAP//AAAAAAIAAAAKAPz/AAAAAAIAAAAJAPn/AAAAAAIAAAAGAPf/AAAAAAIAAAAGAPb/AAAAAAIAAAAFAPb/AAAAAAIAAAADAPr/AAAAAAIAAAADAPn/AAAAAAIAAAADAPj/AAAAAAIAAAAEAPf/AAAAAAIAAAAEAPb/AAAAAAIAAAAFAPX/AAAAAAIAAAAFAPT/AAAAAAIAAAALAPn/AAAAAAIAAAALAPr/AAAAAAIAAAAMAPv/AAAAAAIAAAAMAPz/AAAAAAIAAAALAPz/AAAAAAIAAAALAP3/AAAAAAIAAAALAPv/AAAAAAIAAAAMAP3/AAAAAAIAAAAMAP7/AAAAAAIAAAANAP//AAAAAAIAAAALAAMAAAAAAAIAAAAKAAMAAAAAAAIAAAAEAAQAAAAAAAIAAAAFAAUAAAAAAAIAAAAGAAUAAAAAAAIAAAAGAAQAAAAAAAIAAAAHAAQAAAAAAAIAAAAIAAQAAAAAAAIAAAAJAAQAAAAAAAIAAAAKAAQAAAAAAAIAAAALAAQAAAAAAAIAAAAMAAQAAAAAAAIAAAAMAAUAAAAAAAIAAAANAAUAAAAAAAIAAAANAAYAAAAAAAIAAAAMAAYAAAAAAAIAAAAMAAcAAAAAAAIAAAAMAAgAAAAAAAIAAAALAAgAAAAAAAIAAAALAAkAAAAAAAIAAAAMAAkAAAAAAAIAAAALAAcAAAAAAAIAAAALAAYAAAAAAAIAAAALAAUAAAAAAAIAAAAIAAUAAAAAAAIAAAAIAAYAAAAAAAIAAAAIAAcAAAAAAAIAAAAIAAgAAAAAAAIAAAAJAAgAAAAAAAIAAAAJAAcAAAAAAAIAAAAKAAcAAAAAAAIAAAAKAAYAAAAAAAIAAAAKAAUAAAAAAAIAAAAJAAUAAAAAAAIAAAAJAAYAAAAAAAIAAAAKAAgAAAAAAAIAAAAHAAUAAAAAAAIAAAAHAAYAAAAAAAIAAAAFAAQAAAAAAAIAAAAGAAYAAAAAAAIAAAANAAQAAAAAAAIAAAANAAMAAAAAAAIAAAANAAIAAAAAAAIAAAAGAPT/AAADAAIAAAAHAPT/AAADAAIAAAAGAPP/AAAAAAIAAAAHAPP/AAAAAAIAAAAFAPL/AAAAAAIAAAAGAPL/AAAAAAIAAAAHAPL/AAAAAAIAAAASAAYAAAAAAAIAAAASAAUAAAAAAAIAAAASAAQAAAAAAAIAAAASAAMAAAAAAAIAAAASAAIAAAAAAAIAAAASAAEAAAAAAAIAAAASAAAAAAAAAAIAAAASAP//AAAAAAIAAAATAP//AAAAAAIAAAATAAAAAAAAAAIAAAATAAEAAAAAAAIAAAATAAIAAAAAAAIAAAATAAMAAAAAAAIAAAATAAQAAAAAAAIAAAATAAUAAAAAAAIAAAATAAYAAAAAAAIAAAAUAAYAAAAAAAIAAAAUAAUAAAAAAAIAAAAUAAQAAAAAAAIAAAAUAAMAAAAAAAIAAAAUAAIAAAAAAAIAAAAUAAEAAAAAAAIAAAAUAAAAAAAAAAIAAAAUAP//AAAAAAIAAAAOAAYAAAAHAAgAAAAPAAYAAAAHAAgAAAAQAAYAAAAHAAgAAAAQAAUAAAAHAAgAAAARAAUAAAAHAAgAAAARAAYAAAAHAAgAAAAQAAQAAAAHAAgAAAAQAAMAAAAHAAgAAAAQAAIAAAAHAAgAAAARAAIAAAAHAAgAAAARAAEAAAAHAAgAAAARAAAAAAAHAAgAAAARAP//AAAHAAgAAAAQAAAAAAAHAAgAAAAQAAEAAAAHAAgAAAARAAMAAAAHAAgAAAARAAQAAAAHAAgAAAAPAAUAAAAHAAgAAAAOAAUAAAAHAAgAAAAOAAQAAAAHAAgAAAAOAAMAAAAHAAgAAAAOAAIAAAAHAAgAAAAOAAEAAAAHAAgAAAAOAAAAAAAHAAgAAAAPAAAAAAAHAAgAAAAOAP//AAAHAAgAAAAPAAEAAAAHAAgAAAAPAAIAAAAHAAgAAAAPAAMAAAAHAAgAAAAPAAQAAAAHAAgAAAAPAP//AAAHAAgAAAAQAP//AAAHAAgAAAA=")
tile_set = SubResource("TileSet_sugp2")
script = ExtResource("2_sugp2")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAABAPj/AAAAAAoAAAACAPj/AAAAAAoAAAACAPf/AAAAAAoAAAADAPf/AAAAAAoAAAADAPb/AAAAAAoAAAACAPb/AAAAAAoAAAACAPX/AAAAAAoAAAADAPX/AAAAAAoAAAAEAPX/AAAAAAoAAAAEAPT/AAAAAAoAAAADAPT/AAAAAAoAAAADAPP/AAAAAAoAAAAEAPP/AAAAAAoAAAAIAPT/AAAAAAoAAAAJAPT/AAAAAAoAAAAJAPX/AAAAAAoAAAAKAPX/AAAAAAoAAAAKAPb/AAAAAAoAAAAKAPf/AAAAAAoAAAALAPf/AAAAAAoAAAALAPj/AAAAAAoAAAAMAPj/AAAAAAoAAAAIAPP/AAAAAAoAAAAIAPL/AAAAAAoAAAAFAPP/AAAAAAoAAAAEAPL/AAAAAAoAAAAEAPH/AAAAAAoAAAA=")
tile_set = SubResource("TileSet_sugp2")
y_sort_origin = 1

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_0wfyh")]
position = Vector2(75.99999, 74.99999)

[node name="Rock" parent="." instance=ExtResource("4_jyhfs")]
position = Vector2(142.33334, 55.333336)

[node name="HUD" parent="." instance=ExtResource("5_tbgi4")]

[node name="Enemy" parent="." instance=ExtResource("7_o6xl0")]
position = Vector2(216.66669, 38.000008)
scale = Vector2(0.20000002, 0.20000002)

[connection signal="game_over" from="." to="HUD" method="_on_main_game_over"]
[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="health_change" from="Player" to="HUD" method="_on_player_health_change"]
